WIP: demo translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -39,5 +39,30 @@
   "Narrow by Tag":"Narrow by Tag",
   "Search for tags":"Search for tags",
   "Narrow by Publisher":"Narrow by Publisher",
-  "Search for publishers":"Search for publishers"
+  "Search for publishers":"Search for publishers",
+
+  "Trang 3":"/game/:gameId",
+  "RELEASE DATE":"RELEASE DATE",
+  "PUBLISHER":"PUBLISHER",
+  "Buy":"Buy",
+  "Free to Play":"Free to Play",
+  "Add to Cart":"Add to Cart",
+  "Already in Cart":"Already in Cart",
+  "Already in Library":"Already in Library",
+  "ABOUT THIS GAME":"ABOUT THIS GAME",
+  "SYSTEM REQUIREMENTS":"SYSTEM REQUIREMENTS",
+  "MINIMUM":"MINIMUM",
+  "RECOMMENDED":"RECOMMENDED",
+  "OS":"OS",
+  "Processor":"Processor",
+  "Memory":"Memory",
+  "Graphics":"Graphics",
+  "Storage":"Storage",
+  "Additional Notes":"Additional Notes",
+  "CUSTOMER REVIEWS FOR ":"CUSTOMER REVIEWS FOR ",
+  "Write a review for ":"Write a review for ",
+  "Write your review here...":"Write your review here...",
+  "Post Review":"Post review",
+  "Do you recommend this game?":"Do you recommend this game?",
+  "No Reviews have been made.":"No Reviews have been made."
 }
