Multi-language function

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -39,6 +39,7 @@
     "Game Approved": "Game Approved",
     "Decline Game Request": "Decline Game Request",
     "To": "To",
+    "Type your decline reason...": "Type your decline reason...",
     "Game Approval Response": "Game Approval Response",
     "Answer for": "Answer for",
     "Declined request": "Declined request",
